--- a/style.css
+++ b/style.css
@@ -13,9 +13,10 @@
 	--clr-neutral-400: hsl(273, 4%, 51%);
 	--clr-neutral-200: hsla(0, 0%, 98%, 0.8);
 	--clr-neutral-100: hsl(0, 0%, 98%);
-	--ff-heading: font-family: 'DM Serif Display', serif;
-	--ff-standard: font-family: 'Karla', sans-serif;
+	--ff-heading: 'DM Serif Display', serif;
+	--ff-standard: 'Karla', sans-serif;
 }
+
 img,
 svg {
 	display: block;
@@ -42,7 +43,6 @@ header {
 nav ul {
 	display: none;
 }
-
 
 nav ul li a,
 .button {
@@ -83,6 +83,9 @@ nav img {
 	margin-inline: auto;
 	overflow: hidden;
 }
+.padding-inline {
+	padding: 0 1.5rem;
+}
 
 .columns {
 	display: flex;
@@ -93,21 +96,45 @@ nav img {
 .col {
 	flex: 0 0 100%;
 }
+.bg-general-styles {
+	background-repeat: no-repeat;
+	position: absolute;
+	width: 100%;
+	z-index: -1;
+}
+.bg-mobile-1 {
+	background-image: url('/images/bg-pattern-intro-left-mobile.svg');
+	background-position: top left;
+	top: 0;
+	left: 0;
+	height: 200px;
+}
+.bg-mobile-2 {
+	background-image: url('/images/bg-pattern-intro-right-mobile.svg');
+	background-position: bottom right;
+	bottom: -10rem;
+	height: 350px;
+}
 
 .columns .col:first-child {
+	position: relative;
 	padding-top: 5rem;
+	padding-bottom: 5rem;
 	background-color: var(--clr-primary-800);
+	z-index: 0;
 }
 .col h1 {
 	font-family: 'DM Serif Display', serif;
-	font-size: 2.95rem;
+	font-size: 2.85rem;
 	font-weight: 400;
 	line-height: 3rem;
 	color: var(--clr-neutral-100);
+	z-index: 100;
 }
 
 .col p {
-	margin: 1rem 0;
+	margin-top: 1rem;
+	margin-bottom: 2rem;
 	/* CHANGE PADDING ON DESKTOP */
 	font-size: 0.95rem;
 	line-height: 1.5rem;
@@ -119,21 +146,49 @@ nav img {
 
 @media (min-width: 48rem) {
 	.wrapper {
-		width: min(1200px, 100% - (1.5rem) * 2);
+		width: min(1400px, 100% - (1.5rem) * 2);
+	}
+	.padding-inline {
+		padding: 0;
 	}
 
 	.background {
+		position: relative;
 		position: absolute;
 		background-color: var(--clr-primary-800);
 		width: 100%;
 		height: 70%;
 		left: 0;
+		overflow: hidden;
+	}
+
+	.bg-mobile-1,
+	.bg-mobile-2 {
+		display: none;
+	}
+
+	.bg-desktop-1 {
+		background-image: url('/images/bg-pattern-intro-left-desktop.svg');
+		background-position: bottom left;
+		bottom: -8rem;
+		left: 0;
+		height: 525px;
+		z-index: 10000;
+	}
+
+	.bg-desktop-2 {
+		background-image: url('/images/bg-pattern-intro-right-desktop.svg');
+		background-position: top right;
+		top: -5rem;
+		right: 0;
+		height: 600px;
+		z-index: 1000;
 	}
 	.columns {
-		border: 2px solid green;
 		padding: 6rem 0;
 		position: relative;
 		flex-direction: row;
+		z-index: 10;
 	}
 	.columns .col:first-child {
 		background-color: transparent;
