--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ p,
 span,
 li,
 a {
-	font-family: 'Karla', sans-serif;
+	font-family: var(--ff-standard);
 	text-decoration: none;
 }
 ul,
@@ -115,13 +115,15 @@ nav img {
 	bottom: -10rem;
 	height: 350px;
 }
-
+/* section {
+	z-index: 10000;
+} */
 .columns .col:first-child {
 	position: relative;
 	padding-top: 5rem;
 	padding-bottom: 5rem;
 	background-color: var(--clr-primary-800);
-	z-index: 0;
+	z-index: 1000;
 }
 .col h1 {
 	font-family: 'DM Serif Display', serif;
@@ -129,13 +131,14 @@ nav img {
 	font-weight: 400;
 	line-height: 3rem;
 	color: var(--clr-neutral-100);
-	z-index: 100;
+}
+.col h1 span {
+	font-family: var(--ff-heading);
 }
 
 .col p {
 	margin-top: 1rem;
 	margin-bottom: 2rem;
-	/* CHANGE PADDING ON DESKTOP */
 	font-size: 0.95rem;
 	line-height: 1.5rem;
 	color: var(--clr-neutral-200);
@@ -144,9 +147,65 @@ nav img {
 	width: 100%;
 }
 
+.flex-group {
+	padding-top: 13rem;
+	text-align: center;
+}
+.flex-group h2 {
+	font-size: 3.25rem;
+	margin-bottom: 5rem;
+	position: relative;
+}
+.flex-group h2::before {
+	position: absolute;
+	content: '';
+	top: -3rem;
+	left: 50%;
+	transform: translateX(-50%);
+	width: 150px;
+	height: 1px;
+	background-color: var(--clr-primary-500);
+}
+.flex-boxes {
+	display: flex;
+	flex-direction: column;
+	gap: 3.5rem;
+}
+.flex-box {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+.flex-box h3 {
+	font-size: 1.75rem;
+	margin-bottom: 1.25rem;
+}
+
+.flex-box p {
+	font-size: 1rem;
+	line-height: 1.5rem;
+	color: var(--clr-neutral-400);
+}
+.flex-box img {
+	margin-bottom: 2rem;
+}
+
 @media (min-width: 48rem) {
+	header {
+		padding: 1.5rem 0;
+	}
+
+	nav ul {
+		display: flex;
+		align-items: center;
+		gap: 1.5rem;
+	}
+
+	nav img {
+		display: none;
+	}
 	.wrapper {
-		width: min(1400px, 100% - (1.5rem) * 2);
+		width: min(1200px, 100% - (1.5rem) * 2);
 	}
 	.padding-inline {
 		padding: 0;
@@ -173,7 +232,7 @@ nav img {
 		bottom: -8rem;
 		left: 0;
 		height: 525px;
-		z-index: 10000;
+		z-index: 5;
 	}
 
 	.bg-desktop-2 {
@@ -182,32 +241,61 @@ nav img {
 		top: -5rem;
 		right: 0;
 		height: 600px;
-		z-index: 1000;
-	}
-	.columns {
-		padding: 6rem 0;
-		position: relative;
-		flex-direction: row;
 		z-index: 10;
+	}
+
+	.columns {
+		position: relative;
+		padding: 6rem 0;
+		flex-direction: row;
+		gap: 2rem;
 	}
 	.columns .col:first-child {
 		background-color: transparent;
 	}
+
+	.columns .col:first-child::before {
+		position: absolute;
+		content: '';
+		width: 160px;
+		height: 1px;
+		top: 0;
+		background-color: var(--clr-neutral-100);
+	}
+
 	.col {
 		flex: 0 0 50%;
+		text-align: left;
+	}
+	.col h1 {
+		font-size: 4.5rem;
+		line-height: 4rem;
+	}
+	.col h1 span {
+		display: block;
+	}
+	.col p {
+		margin-top: 2rem;
+		font-size: 1.05rem;
+		line-height: 2rem;
 	}
 
-	header {
-		padding: 1.5rem 0;
+	.flex-group {
+		padding-top: 10rem;
+		text-align: left;
 	}
-
-	nav ul {
-		display: flex;
-		align-items: center;
-		gap: 1.5rem;
+	.flex-group h2 {
+		font-size: 4.5rem;
 	}
-
-	nav img {
-		display: none;
+	.flex-group h2::before {
+		top: -4rem;
+		left: 0;
+		transform: translateX(0);
+	}
+	.flex-boxes {
+		flex-direction: row;
+	}
+	.flex-box {
+		align-items: flex-start;
 	}
 }
